varsion angular terminé a 98%
